Custom Input Color

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
         </main>
 
         <footer class="color">
-                <span>Changez la couleur : </span>
             <form>
-                <input type="color" id="choixCouleur" oninput="changeColor()" value="">
+                <label>Changer la couleur: </label>
+                <input type="color" id="choixCouleur" oninput="changeColor()" onclick="changeColor()" value="#fffd78">
             </form>
         </footer>
 </body>
