correction of media print and add link to github and linkedin

--- a/index.html
+++ b/index.html
@@ -84,23 +84,19 @@
                     </div>
 
                     <div id="liste">
-                        <ul id="magasin">
-                            <li>Rangement Magasin</li>
-                            <li>Conseiller le client</li>
-                            <li>Nettoyage</li>
-                            <li>Réassortir</li>
-                            <li>Étiquetage</li>
-                            <li>Répondre au Téléphone</li>
-                            <li>Caisse</li>
-                        </ul>
-                        <ul id="info">
-                            <li>Secrétariat</li>
-                            <li>Utilisation licences Microsoft</li>
-                            <li>Developpement Web FrontEnd/BackEnd</li>
-                            <li>Programmation en C, C++, C#</li>
-                            <li>Programmation en Python</li>
+                        <ul id="prog">
+                            <li>HTML5 / CSS3</li>
+                            <li>Programmation en JavaScript</li>
                             <li>Programmation en Java</li>
-                            <li>Développement systèmes embarqués</li>
+                            <li>Programmation en C++</li>
+                            <li>Programmation en Python</li>
+                        </ul>
+                        <ul id="tools">
+                            <li>Git / GitHub</li>
+                            <li>Linux / Linux Server</li>
+                            <li>Windows / Windows Server</li>
+                            <li>MySql / MariaDB</li>
+                            <li>Arduino / Raspberry PI</li>
                         </ul>
                     </div>
 
@@ -116,7 +112,7 @@
                         <li>2017 : Obtention du CE1D à Saint Joseph Châtelet</li>
                         <li>2019 : CE2D à Saint Joseph Châtelet</li>
                         <li>2021 : CESS à Saint Joseph Charleroi</li>
-                        <li>2025 : Bachelier en Informatique et systèmes (Si dieu le veut)</li>
+                        <li>2025 : Bachelier en Informatique et systèmes option Développement</li>
                     </ul>
 
                 </section>
@@ -127,7 +123,7 @@
                     </div>
 
                     <ul>
-                        <li>La musique (10 ans de guitare)</li>
+                        <li>La guitare</li>
                         <li>Le théatre</li>
                         <li>Le sport</li>
                     </ul>
@@ -141,6 +137,10 @@
                 <label>Changer la couleur: </label>
                 <input type="color" id="choixCouleur" oninput="changeColor()" onclick="changeColor()" value="#fffd78">
             </form>
+            <div>
+                <a href="https://linkedin.com/in/ugo-degueldre-8272882b6" target="_blank"><img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg" alt="ugo degueldre" height="30" width="40" /></a>
+                <a href="https://github.com/sAkaD0" target="_blank"><img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/github.svg"alt="ugo degueldre" height="30" width="40"></a>
+            </div>
         </footer>
 </body>
 </html>
