add new function jquery

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <meta name="description" content="CV de DEGUELDRE UGO.">
     <meta name="author" content="DEGUELDRE Ugo">
     <meta name="copyright" content="DEGUELDRE Ugo">
-    <script src="anim.js"></script>
+    <script src="jquery-3.3.1.min.js"></script>
 </head>
 <body>
+    <div id="lightbox">
+        <img src="img/photoMoi.jpg" alt="" id="big">
+    </div>
         <header class="color">
             <div></div>
             <div>
@@ -143,4 +146,5 @@
             </div>
         </footer>
 </body>
+<script src="anim.js"></script>
 </html>
